# Contrastive_Curriculum-SentimentReasoning

./: .gitignore  README.md
ccsr/: EXECUTION_GUIDE.md  pyproject.toml
ccsr/configs/: default.yaml  ds_config.json
ccsr/slurm/: 01_precompute_difficulty.sbatch  02_precompute_rationale_sim.sbatch  03_train_single.sbatch  04_run_all_ablations.sh  05_run_baselines.sh  06_evaluate_single.sbatch  07_evaluate_all.sh  env.sh
ccsr/src/data/: curriculum.py  load_dataset.py  prompt_formatter.py
ccsr/src/evaluation/: attention_entropy.py  classification_metrics.py  faithfulness.py  rationale_metrics.py
ccsr/src/models/: ccsr_trainer.py  contrastive_head.py  focal_loss.py
ccsr/src/scripts/: evaluate.py  precompute_difficulty.py  precompute_rationale_sim.py  run_ablations.py  run_baselines.py  train.py
ccsr/tests/: test_classification_metrics.py  test_contrastive_head.py  test_curriculum.py  test_focal_loss.py  test_prompt_formatter.py
docs/superpowers/plans/: 2026-04-16-ccsr-implementation.md
docs/superpowers/specs/: 2026-04-16-ccsr-design.md
paper/: main.tex
